<resources>
    <string name="app_name">Moj esDnevnik</string>
    <string name="select_student">Izaberi učenika</string>
    <string name="unknown_error">Nepoznata greška</string>
    <string name="username_label">Korisničko ime</string>
    <string name="password_label">Šifra</string>
    <string name="login">Prijavi se</string>
    <string name="enter_password_here">Upišite vašu sifru ovde</string>
    <string name="example_google_com">example@google.com</string>
    <string name="remember_me">Zapamti me</string>
    <string name="no_internet_connection">Uređaj nema vezu sa internetom.</string>
    <string name="logout">Odjavi se</string>
    <string name="accept_agreement">Prihvatam pravila i uslove korišćenja</string>
    <string name="agreement_message">Android aplikacija \"Moj esDnevnik\" nije zvanična aplikacija Ministarstva prosvete, nauke i tehnološkog razvoja Republike Srbije. Ne snosnimo nikakvu odgovornost za validnost podataka. Aplikacija samo preuzima podatke sa portala moj.esdnevnik.rs i prikazuje ih u aplikaciji.</string>
    <string name="accept">Prihvatam</string>
    <string name="licence_agreement"><u>pravila i uslove korišćenja</u></string>
    <string name="licence_agreement_title">Pravila i uslovi korišćenja</string>
    <string name="close">Zatvori</string>
    <string name="nema_podataka_za_izabranog_ucenika_skolu_i_razred">Nema podataka za izabranog učenika, školu i razred.</string>
    <string name="select_school">Izaberite školu</string>
    <string name="select_school_year">Izaberite razred (školsku godinu)</string>
    <string name="no_activity_for_selected_class">Nema aktivnosti za izabrani predmet</string>
    <string name="no_grades">Ne postoje unete ocene za ovaj predmet.</string>
    <string name="app_info">O aplikaciji</string>
    <string name="version">Verzija</string>
    <string name="unofficial_app">Nezvanična android aplikacija</string>
</resources>
