<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_students"
        android:icon="@drawable/ic_account"
        android:title="@string/select_student"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_app_version"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/app_info"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/mi_logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"/>

</menu>